use js to prevent sticky headers from overlapping, change font

--- a/styles/project_styles.css
+++ b/styles/project_styles.css
@@ -1,10 +1,34 @@
 html {
     font-size: 10px;
-    font-family: 'Shadows Into Light';
+    font-family:  'Space Mono';
 }
 
 body {
     margin: 0;
+    /* overflow-anchor: none;  makes the body non-scrollable (we will add scrolling to the sidebar and main content containers)
+    display: flex;  /*enables flex content for its children*/
+    /*flex-direction: column; */
+    box-sizing: border-box;
+}
+
+
+.hero-image {
+    background-image: url("../images/the_universe.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    min-height: 600px;
+}
+
+.hero-text {
+    font-size: 6rem;
+    color: #ffffff;
+    margin: auto;
+    text-align: center;
+    vertical-align: center;
+    top: 60px;
 }
 
 .sticky {
@@ -12,11 +36,18 @@ body {
     top: 0;
 }
 
+/* .nav-bar-project-titles {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+} */
+
 nav {
     text-align: center;
     font-size: 2rem;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     background-color: #ffffff;
 }
 
@@ -54,31 +85,12 @@ a:active {
     color: #999999;
 }
 
-#content {
+.content {
     font-size: 3rem;
 }
 
-.hero-image {
-    background-image: url("../images/coffee-table.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: right;
-    min-height: 600px;
-    max-width: 100%;
-}
-
-.hero-text {
-    margin: auto;
-    color: #000000;
-    text-align: center;
-    padding-top: 15%;
-    padding-right: 33%;
-    top: 60px;
-}
-
 .project {
-    background-color: #ffffff
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .project img {
@@ -88,12 +100,20 @@ a:active {
 
 .project-title {
     padding-left: 10%;
-    top: 60px;
     background-color: #ffffff;
 }
 
+/* @media screen and (max-width: 680px) {
+    .profile-image {
+        outline: 5px solid red;
+    }
+    .project-title {
+        top: 89px;
+    }
+} */
+
 .project p {
-    padding: 0 10% 10%;
+    padding: 0 5% 10%;
     font-size: 1.5rem;
 }
 
